--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
   flex-direction: column;
   background-size: cover;
   background:
-  linear-gradient( rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("https://source.unsplash.com/collection/827807/daily");
+  linear-gradient( rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url("https://source.unsplash.com/1600x900/?technology,backgrounds");
   background-size: cover;
 }
 
