--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Dosis','Roboto Slab', serif;
   display: flex;
   min-height: 110vh;
   flex-direction: column;
