--- a/css/style.1.0.2.css
+++ b/css/style.1.0.2.css
@@ -306,6 +306,8 @@ img {
   bottom: 0;
   border-top: 1px solid #d0d4d6;
   background-color: #fff;
+  opacity: 0.6;
+
   font-size: 12px;
   color: #5f7681;
 }
