--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/****************************************/
+//****************************************//
 
 // Number of slides
 $slide-count: 7;
@@ -36,7 +36,7 @@ $c-background: #101010;
 $c-text: $c-light-grey;
 $c-label-text: $c-grey;
 
-/****************************************/
+//****************************************//
 
 html,
 body {
