--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@ $c-background: #101010;
 $c-text: $c-light-grey;
 $c-label-text: $c-grey;
 
-/****************************************/
+/*****************https://codepen.io/pbutcher/pen/yLLKbNo***********************/
 
 html,
 body {
