--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(2) {
-  background: url("https://hellaz.net/1000x2000/2E112D/fff?text=1");
+  background: url("https://source.unsplash.com/random/1000×2000/2E112D/fff?text=1");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -108,7 +108,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(4) {
-  background: url("https://hellaz.net/1000x2000/540032/fff?text=2");
+  background: url("https://source.unsplash.com/random/1000×2000/540032/fff?text=2");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -127,7 +127,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(6) {
-  background: url("https://hellaz.net/1000x2000/820333/fff?text=3");
+  background: url("https://source.unsplash.com/random/1000×2000/820333/fff?text=3");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -146,7 +146,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(8) {
-  background: url("https://hellaz.net/1000x2000/C9283E/fff?text=4");
+  background: url("https://source.unsplash.com/random/1000×2000/C9283E/fff?text=4");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -165,7 +165,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(10) {
-  background: url("https://hellaz.net/1000x2000/F0433A/fff?text=5");
+  background: url("https://source.unsplash.com/random/1000×2000/F0433A/fff?text=5");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
