--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(2) {
-  background: url("https://picsum.photos/seed/picsum/1000/2000/?text=1");
+  background: url("https://picsum.photos/seed/picsum/1000/2000/?random=1");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -108,7 +108,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(4) {
-  background: url("https://picsum.photos/seed/picsum/1000/2000/?text=2");
+  background: url("https://picsum.photos/seed/picsum/1000/2000/?random=2");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -127,7 +127,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(6) {
-  background: url("https://picsum.photos/seed/picsum/1000/2000/?text=3");
+  background: url("https://picsum.photos/seed/picsum/1000/2000/?random=3");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -146,7 +146,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(8) {
-  background: url("https://picsum.photos/seed/picsum/1000/2000/?text=4");
+  background: url("https://picsum.photos/seed/picsum/1000/2000/?random=4");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -165,7 +165,41 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(10) {
-  background: url("https://picsum.photos/seed/picsum/1000/2000/?text=5");
+  background: url("https://picsum.photos/seed/picsum/1000/2000/?random=5");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+}
+.slide:nth-child(10):after {
+  position: absolute;
+  margin: auto;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.slide:nth-child(10) {
+  background: url("https://picsum.photos/seed/picsum/1000/2000/?random=6");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+}
+.slide:nth-child(10):after {
+  position: absolute;
+  margin: auto;
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.slide:nth-child(10) {
+  background: url("https://picsum.photos/seed/picsum/1000/2000/?random=7");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
