--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,22 @@ $b-slides: url("https://via.placeholder.com/1000x2000/2E112D/fff?text=1")
   url("https://via.placeholder.com/1000x2000/820333/fff?text=3")
   url("https://via.placeholder.com/1000x2000/C9283E/fff?text=4")
   url("https://via.placeholder.com/1000x2000/F0433A/fff?text=5");
+
+Yass Queen: #ff1d58
+Sister Sister: #f75990
+Crown Yellow: #fff685
+Blue Light: #00DDFF
+Brutal Blue: #0049B7
+Bright Green: #beef00
+Electric Red: #ff0028
+Deep Green: #657a00
+Power Blue: #1400c6
+Green Treeline: #478559
+Purple baseline: #161748
+Pink highlight: #f95d9b
+Bluewater lowlight: #39a0ca
+
+
 // $b-slides: false;
 
 // Total duration of slide animation
