--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(1) {
-  background: url("https://via.placeholder.com/1000x2000/2E112D/fff?text=Hellaz.Network");
+  background: url("https://place-hold.it/1000x2000/2E112D/fff?bold&fontsize=60&text=Hellaz.Network");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -108,7 +108,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(2) {
-  background: url("https://via.placeholder.com/1000x2000/336699/fff?text=Hellaz.Network");
+  background: url("https://place-hold.it/1000x2000/336699/fff?bold&fontsize=60&text=Hellaz.Network");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -127,7 +127,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(3) {
-  background: url("https://via.placeholder.com/1000x2000/f75990/fff?text=Hellaz.Network");
+  background: url("https://place-hold.it/1000x2000/f75990/fff?bold&fontsize=60&text=Hellaz.Network");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -146,7 +146,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(4) {
-  background: url("https://via.placeholder.com/1000x2000/fff685/fff?text=Hellaz.Network");
+  background: url("https://place-hold.it/1000x2000/fff685/fff?bold&fontsize=60&text=Hellaz.Network");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -165,7 +165,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(5) {
-  background: url("https://via.placeholder.com/1000x2000/00DDFF/fff?text=Hellaz.Network");
+  background: url("https://place-hold.it/1000x2000/00DDFF/fff?bold&fontsize=60&text=Hellaz.Network");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -184,7 +184,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(6) {
-  background: url("https://via.placeholder.com/1000x2000/0049B7/fff?text=Hellaz.Network");
+  background: url("https://place-hold.it/1000x2000/0049B7/fff?bold&fontsize=60&text=Hellaz.Network");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -203,7 +203,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(7) {
-  background: url("https://via.placeholder.com/1000x2000/ff0028/fff?text=Hellaz.Network");
+  background: url("https://place-hold.it/1000x2000/ff0028/fff?bold&fontsize=60&text=Hellaz.Network");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -222,7 +222,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(8) {
-  background: url("https://via.placeholder.com/1000x2000/657a00/fff?text=Hellaz.Network");
+  background: url("https://place-hold.it/1000x2000/657a00/fff?bold&fontsize=60text=Hellaz.Network");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -241,7 +241,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(9) {
-  background: url("https://via.placeholder.com/1000x2000/1400c6/fff?text=Hellaz.Network");
+  background: url("https://place-hold.it/1000x2000/1400c6/fff?bold&fontsize=60&text=Hellaz.Network");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
@@ -260,7 +260,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(10) {
-  background: url("https://via.placeholder.com/1000x2000/1269C7/fff?text=Hellaz.Team");
+  background: url("https://place-hold.it/1000x2000/1269C7/fff??bold&fontsize=60&text=Hellaz.Team");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
