--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ input:checked:nth-of-type(7) ~ nav label:nth-child(7) {
   display: none;
 }
 .slide:nth-child(4) {
-  background: url("https://place-hold.it/1000x2000/fff685/fff?bold&fontsize=60&text=Hellaz.Network");
+  background: url("https://place-hold.it/1000x2000/ff0028/fff?bold&fontsize=60&text=Hellaz.Network");
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
